[gd_scene load_steps=13 format=3 uid="uid://b3etqvsepcp2d"]

[ext_resource type="Script" path="res://scenes/builder_box/builder_box_ui/builder_box_ui.gd" id="1_6ne6n"]
[ext_resource type="Texture2D" uid="uid://bhuaq3m5m6u8s" path="res://assets/ui/builder_box/Builder Box Panel.png" id="1_xrh2w"]
[ext_resource type="PackedScene" uid="uid://bdex2t53ybdoq" path="res://scenes/builder_box/builder_box_ui/builder_box_slot.tscn" id="2_ddq6p"]
[ext_resource type="Texture2D" uid="uid://c67mysjdhup5v" path="res://assets/ui/builder_box/Din Symbol.png" id="4_clor6"]
[ext_resource type="FontFile" uid="uid://drd3xowq8frki" path="res://assets/font/TitilliumWeb-Bold.ttf" id="5_wmwnr"]
[ext_resource type="Texture2D" uid="uid://wdeoyhl47dm5" path="res://assets/ui/builder_box/exit.png" id="6_epkbf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sivwm"]
texture = ExtResource("1_xrh2w")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vu2an"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lpyx4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3kq2l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_15shv"]

[sub_resource type="LabelSettings" id="LabelSettings_oi5fc"]
font = ExtResource("5_wmwnr")
font_size = 600

[node name="BuilderBoxUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6ne6n")

[node name="BuildUi" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -459.0
offset_top = -315.0
offset_right = 459.0
offset_bottom = 315.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_sivwm")

[node name="SlotsContainer" type="Panel" parent="BuildUi"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -388.0
offset_top = -140.0
offset_right = 389.0
offset_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_vu2an")

[node name="BuilderBoxSlot" parent="BuildUi/SlotsContainer" instance=ExtResource("2_ddq6p")]
visible = false
layout_mode = 1
scale = Vector2(0.13, 0.13)

[node name="DinAvailable" type="Panel" parent="BuildUi"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.0
offset_top = -522.0
offset_right = 305.0
offset_bottom = -384.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
pivot_offset = Vector2(674, 456.5)
theme_override_styles/panel = SubResource("StyleBoxEmpty_lpyx4")

[node name="HBoxContainer" type="HBoxContainer" parent="BuildUi/DinAvailable"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -725.0
offset_top = -471.5
offset_right = 703.0
offset_bottom = 441.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
pivot_offset = Vector2(725, 472)
theme_override_constants/separation = 10

[node name="DinSymbol" type="Panel" parent="BuildUi/DinAvailable/HBoxContainer"]
custom_minimum_size = Vector2(420, 400)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_3kq2l")

[node name="TextureRect" type="TextureRect" parent="BuildUi/DinAvailable/HBoxContainer/DinSymbol"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -176.5
offset_right = -33.0
offset_bottom = 210.5
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("4_clor6")
expand_mode = 1

[node name="AmountLabel" type="Panel" parent="BuildUi/DinAvailable/HBoxContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_15shv")

[node name="Label" type="Label" parent="BuildUi/DinAvailable/HBoxContainer/AmountLabel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -456.5
offset_right = 1008.0
offset_bottom = 456.5
grow_vertical = 2
size_flags_horizontal = 0
text = "999"
label_settings = SubResource("LabelSettings_oi5fc")
horizontal_alignment = 1

[node name="ExitButton" type="Button" parent="BuildUi"]
layout_mode = 0
offset_left = 131.0
offset_top = 105.0
offset_right = 1206.0
offset_bottom = 1180.0
scale = Vector2(0.05, 0.05)
mouse_default_cursor_shape = 2
icon = ExtResource("6_epkbf")
flat = true

[connection signal="pressed" from="BuildUi/ExitButton" to="." method="_on_exit_button_pressed"]
